Added login and register and dummydata and contect some logics

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ gradle.properties
 /gradle.properties
 # Local properties with secrets
 gradle.properties
+# Google Services file (contains API keys)
+/app/google-services.json
